# OpenCL-in-action

./: .gitignore  CMakeLists.txt  Dockerfile  build.sh  interactive.sh
sogang/HW1/: Config_SoA_AoS.h  Context_SoA_AoS.h  Image_IO.cpp  My_Image_Filtering_Codes.cpp  main_SoA_AoS.cpp
sogang/HW1/Data/: stat_file_CBO.txt
sogang/HW1/Kernel/: AoS_GS_GPU.cl  AoS_SO_GPU.cl  SoA_GS_GPU.cl  SoA_SO_GPU.cl  dummy.cl
sogang/HW1/Util/: my_OpenCL_util_2_2.h
sogang/HW1/inc/FreeImage/: FreeImage.h
